Fix GitHub Action permissions for wiki sync
Added 'contents: write' permission to the workflow job.

The GITHUB_TOKEN needs explicit permissions to push to the wiki repository.
Without this, the action fails with 403 Permission denied.

This should allow the auto-sync to work properly.

--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   sync-wiki:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Required to push to wiki
 
     steps:
       - name: Checkout main repo
