--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -36,6 +36,12 @@ jobs:
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
 
+      - name: Install Linux audio build deps
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pkg-config libasound2-dev
+
       - name: Build release
         run: cargo build --release
 
