--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vellum-fe"
-version = "0.1.0"
+version = "0.1.1-beta.1"
 edition = "2021"
 authors = ["VellumFE Contributors"]
 description = "A modern, high-performance terminal frontend for GemStone IV"
