--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -170,7 +170,7 @@ jobs:
 
   macos-intel:
     name: Build (macOS x86_64)
-    runs-on: macos-13
+    runs-on: macos-15-intel
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
