--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ ratatui = "0.29"
 crossterm = { git = "https://github.com/justinpopa/crossterm.git", branch = "dev", features = ["event-stream"] }
 tui-textarea = "0.7"
 
-# GUI (future)
-# egui = "0.29"
-# eframe = "0.29"
+# GUI
+egui = "0.33"
+eframe = { version = "0.33", features = ["persistence"] }
 
 # Serialization
 serde = { version = "1", features = ["derive"] }
@@ -35,9 +35,8 @@ aho-corasick = "1"  # Fast literal string matching for highlights
 quick-xml = "0.36"  # XML parsing
 include_dir = "0.7"  # Embed default config files
 rpassword = "7"
-# openssl = "0.10"
-# openssl = "0.10"  # For local builds
-openssl = { version = "0.10", features = ["vendored"] }  # For CI builds
+openssl = "0.10"
+# openssl = { version = "0.10", features = ["vendored"] }  # For CI builds
 
 # Sound (optional)
 rodio = { version = "0.19", optional = true }
