--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ tui-textarea = "0.7"
 # GUI
 egui = "0.33"
 eframe = { version = "0.33", features = ["persistence"] }
+image = "0.24"  # For loading PNG images (injury doll silhouettes)
 
 # Serialization
 serde = { version = "1", features = ["derive"] }
