--- a/defaults/config.toml
+++ b/defaults/config.toml
@@ -70,10 +70,6 @@ min_command_length = 3
 # Global toggle for squelch patterns (disable without deleting patterns)
 ignores_enabled = true
 
-# --- Startup ---
-startup_music = true
-startup_music_file = "wizard_music"
-
 # --- Performance Overlay (Debug) ---
 # Press F3 or use .perf command to toggle
 performance_stats_enabled = false
@@ -86,28 +82,31 @@ perf_stats_height = 23
 # ------------------------------------------------------------
 # SOUND
 # ------------------------------------------------------------
-# Audio feedback for game events.
+# Audio feedback and startup music.
+# Set enabled = false to skip audio initialization entirely.
 
 [sound]
 enabled = true
 volume = 0.7           # Master volume (0.0 to 1.0)
 cooldown_ms = 500      # Minimum time between repeated sounds
+startup_music = true   # Play music on connection
+startup_music_file = "wizard_music"  # Sound file (without extension)
 
 
 # ------------------------------------------------------------
 # TEXT-TO-SPEECH (Accessibility)
 # ------------------------------------------------------------
 # Screen reader support via native TTS engines.
+# TTS operates independently of the sound system above.
 # Controls: Ctrl+Shift+N (next), Ctrl+Shift+P (previous),
 #           Ctrl+Shift+M (mute toggle)
 
 [tts]
 enabled = false        # Set to true to enable TTS
-voice = ""             # Leave empty for system default voice
 rate = 1.0             # Speech rate: 0.5 (slow) to 2.0 (fast)
 volume = 1.0           # Volume: 0.0 (silent) to 1.0 (full)
 speak_thoughts = true  # Speak focused thoughts
-speak_whispers = true  # Speak whispers and speech
+speak_speech = true    # Speak speech window
 speak_main = false     # Speak main window (can be overwhelming)
 
 
