feat: add DragonRealms direct connect support and layout theme setting
Direct Connection:
- Add DragonRealms game codes: dr, drplatinum, drfallen, drtest
- Map to proper game codes: DR, DRX, DRF, DRT
- Update config.toml documentation with all game options

Layout Template:
- Add theme setting to layout header documentation
- Document available theme presets
- Add base_layout setting documentation

Build:
- Switch to vendored OpenSSL for CI builds

--- a/defaults/config.toml
+++ b/defaults/config.toml
@@ -37,7 +37,9 @@ port = 8001
 #
 # account = "your_account"
 # password = "your_password"  # OPTIONAL - stored in PLAIN TEXT, use CLI for security
-# game = "prime"  # Options: "prime", "platinum", "shattered", "test"
+# game = "prime"
+#   GemStone IV: "prime", "platinum", "shattered", "test"
+#   DragonRealms: "dr", "drplatinum", "drfallen", "drtest"
 
 
 # ------------------------------------------------------------
