fix: reset stream to main when prompt is skipped
When a prompt was skipped (due to silent_prompt or no main text),
the current_stream was not being reset to "main". This caused
subsequent text to arrive on the wrong stream (e.g., "room"),
which was then discarded, making all text disappear after a
silent_prompt match.

The fix moves the stream reset to happen unconditionally when
any prompt is received, not just when the prompt is displayed.

Also adds tests for silent_prompt functionality in the highlight
engine.

--- a/defaults/config.toml
+++ b/defaults/config.toml
@@ -176,6 +176,14 @@ drop_unsubscribed = [
 # Default routes unknown streams to main window.
 fallback = "main"
 
+# Room text routing behavior (DragonRealms only - GemStone IV doesn't use streamWindow room).
+# When true (default): Room text (name, description, exits) appears in main window.
+#   The <streamWindow id='room'> tag does NOT change the active stream.
+#   This is correct because the room window displays components, not text.
+# When false: Legacy behavior where <streamWindow id='room'> pushes the stream,
+#   causing room text to be discarded (since room window uses components only).
+room_in_main = true
+
 
 # ============================================================
 # ADVANCED SETTINGS
