--- a/defaults/layout_template.toml
+++ b/defaults/layout_template.toml
@@ -17,7 +17,7 @@
 # ============================================================
 
 # ============================================================
-# ASCII Icon Fram
+# ASCII Icon Farm
 # ============================================================
 # █▣◻◼▫▪◇◆☆★✧✦⚝✡⛤☽☾۞
 # ⚫⚪⬤◉◎⊘⊗⊛●○⬢❤⚠✗✓❄❆❅	
